[package]
name = "corvo-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for Corvo"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
http = "1"

[build-dependencies]
tonic-build = "0.12"
