[package]
name = "corvo-worker"
version = "0.3.0"
edition = "2021"
description = "Rust worker runtime for Corvo"
license = "MIT"

[dependencies]
corvo-client = { path = "../corvo-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1"
serde_json = "1"
tracing = "0.1"
hostname = "0.4"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
http = "1"

[build-dependencies]
tonic-build = "0.12"
